Bug 591815. Don't bail early if we don't have a target frame for mouse down events because we still need to process them. r=smaug a=blocking-betaN+